--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -93,7 +93,7 @@ body {
     float:right;
     font-size: 15px;
 }
-.container ul li{
+.container table tr th{
     list-style-type: none;
     padding-bottom: 10px;
 }
@@ -114,7 +114,13 @@ body {
 #container2{
     width: 84%;
 }
+.container .table  {
+    border: 1px solid black;
+    background-color: red;
+}
+
 /*Validation*/
 .error{
     color: red;
 }
+
