--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,5 +1,5 @@
 html {
-    background: linear-gradient(90deg, rgb(95, 214, 66) 0%, rgba(104,178,184,1) 100%);
+    /*background: linear-gradient(90deg, rgb(95, 214, 66) 0%, rgba(104,178,184,1) 100%);*/
     background-image:url(/resources/images/img01.jpg);
     -webkit-font-smoothing: antialiased;
 }
@@ -57,6 +57,7 @@ body {
      padding: 12px 25px;
     font-family: 'Nova Round', cursive;
     cursor:pointer;
+    background: linear-gradient(to bottom right,lightskyblue,darkblue);
     color: white;
     font-size: 15px;
 }
@@ -78,7 +79,6 @@ body {
 .container ul #reset{
     float: right;
 }
-
 
 /*For register and newUser interface page*/
 
@@ -114,9 +114,32 @@ body {
 #container2{
     width: 84%;
 }
-.container .table  {
+
+table, th, td {
     border: 1px solid black;
-    background-color: red;
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+}
+table .header{
+    background-color: lightgray;
+}
+
+.adminUpdate{
+    background:url(/resources/images/admin/edit-16.png) no-repeat;
+    background-color: #74cd74;
+    color:white;
+    border-style: none;
+    border-radius: 20px;
+    margin: 1px;
+}
+
+.adminDelete{
+    background-color: #d45555;
+    color:white;
+    border-style: none;
+    border-radius: 20px;
+    margin: 1px;
 }
 
 /*Validation*/
